--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-<h1>Hello!</h1>
+<h1>👋 Hi, I'm Shruthi! <br/><a href="https://www.linkedin.com/in/shruthi-udhayakumar/">IT Security Professional</a>, <a href="https://tryhackme.com/p/Shruthy">Cybersecurity enthusiast</a></h1>
+
+<h2>👨‍💻 My certifications </h2>
+
+  - <b>GIAC Certified Incident Handler (GCIH)</b>
+    - (https://www.credly.com/badges/254253b5-6f91-45d3-a2d1-c91e0bc005ca/public_url)  
+  - <b>Systems Security Certified Practitioner (SSCP)</b>
+    - (https://www.credly.com/badges/b0028619-580e-4bcf-88bc-386f1d837c4e/public_url)
+
+  
+
+<h2>👨‍💻 Projects </h2>
+
+  - <b>Practice of Information Security</b>
+    - [Youtube video](https://www.youtube.com/watch?v=Z8xqVGKAqR0&t=23s)
+  - <b>Network Penetration Testing</b>
+    - [Download PDF]()
+
+<!---
+- <b>PowerShell</b>
+  - [Windows EventLog: Failed RDP Logins Source IP to full GeoData Conversion](https://github.com/joshmadakor1/Sentinel-Lab)
+  - [JWipe (Disk Wiping Utility)](https://github.com/joshmadakor1/Jwipe.PowerShell)
+  - [Active Directory Bulk User Creation](https://github.com/joshmadakor1/AD_PS)
+  - [FIM (File Integrity Monitor)](https://github.com/joshmadakor1/PowerShell-Integrity-FIM)
+- <b>C# (.NET Desktop Applications)</b>
+  - [Ransomware Proof of Concept (Encrypter)](https://github.com/joshmadakor1/EncrypterPOC)
+  - [Ransomware Proof of Concept (Decrypter)](https://github.com/joshmadakor1/DecrypterPOC)
+  - [Keylogger with Email Capability](https://github.com/joshmadakor1/Key-Logger-With-Email)
+- <b>Python</b>
+  - [Package Delivery Application (Datastructures and Algorithms Demo)](https://github.com/joshmadakor1/Package-Delivery-Pathfinding-Algorithm)
+--->
+
+<h2> 🌱 Current Fascination on TryHackMe </h2>
+
+- <b>Anti-Reverse Engineering</b>
+  - [Basic and Advanced Dynamic Analysis (Debugging)](https://tryhackme.com/Shruthy/badges/malware-analysis)
+  - [Basic and Advanced Static Analysis](https://tryhackme.com/room/advancedstaticanalysis)
+- <b>OWASP Top 10 vulnerabilities</b>
+  - [Top 10 critical web security risks](https://tryhackme.com/Shruthy/badges/owasp-10)
+- <b>OWASP Top 10 API vulnerabilities</b>
+  - [Top 10 critical API development risks](https://tryhackme.com/Shruthy/badges/software-security)
+  - [SAST and DAST](https://tryhackme.com/room/sast)
+    
+
+<h2> 🤳 Connect with me:</h2>
+
+[<img align="left" alt="Shruthi | Facebook" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.13.0/icons/facebook.svg" />][facebook]
+[<img align="left" alt="Shruthi | LinkedIn" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg" />][linkedin]
+
+
+[linkedin]: https://www.linkedin.com/in/shruthi-udhayakumar/
+[facebook]: https://www.facebook.com/profile.php?id=100055138702996
+
+
+
+<!---
+ShruthiUD/ShruthiUD is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+You can click the Preview link to take a look at your changes.
+
+- 👀 I’m interested in Cybersecurity! Some domains in that would be Digital Forensics, Red teaming and goes on. . 
+- 🌱 I’m currently learning Python, Reverse Engineering, Hadoop, . . .
+- 💞️ I’m looking to collaborate on any new technology!
+- 📫 How to reach me shruthiud@uvic.ca
+--->
